Update main page

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ console.log("Hi " + myName + "! pleased to meet you!");
 					<button class="execute">Run code</button>
 				</section>
 				<!-- End of slides  -->
+			<p>A project for <a href="https://www.juniordevelopercentral.com">juniordevelopercentral.com</a></p>
 		</div>
 	</div>
 		<script src="https://togetherjs.com/togetherjs-min.js"></script>
